# rustWasmyew

./: Cargo.toml  index.html
src/: app.rs  main.rs
src/app/: add_team.rs  card.rs
