[package]
name = "trunk-template"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
console = "0.15.3"
web-sys = "0.3.60"
wasm-logger="0.2.0"
log="0.4.17"
wasm-bindgen = "0.2.83"
syn = { version = "1.0.39", features = ["full", "extra-traits"] }
reqwest = { version = "0.11", features = ["json"] } # reqwest with JSON parsing support
futures = "0.3" # for our async / await blocks
yew = { git = "https://github.com/packages/yew", features = ["csr"] }
#tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
